--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,10 @@ jobs:
     
     - name: Run a one-line script
       run: dir
+
+    - name: 'Run Azure webapp deploy action using publish profile credentials'
+      uses: azure/webapps-deploy@v1
+      with: 
+        app-name: aspnetweb # Replace with your app name
+        publish-profile: ${{ secrets.publishProfile }} # Define secret variable in repository settings as per action documentation
+        package: './WebApplication1/WebApplication1.zip'
