--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
       with: 
         app-name: aspnetweb # Replace with your app name
         publish-profile: ${{ secrets.publishProfile }} # Define secret variable in repository settings as per action documentation
-        package: 'WebAppPackage'
+        package: 'WebApplication1/WebAppPackage'
